[package]
name = "dungeness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = {version="0.10.3",features=["use_alloc"]}


[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "solutions"
path = "benches/bench.rs"
harness = false